# am-observability

./: .gitignore  Makefile  README.md  gen.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
adapters/: __init__.py  _subst.py  capabilities.yaml
adapters/loki/: __init__.py
adapters/prometheus/: __init__.py
adapters/tempo/: __init__.py
am_obs/: __init__.py  adapt.py  catalog.py  catalog_index.py  compose.py  compose_view.py  doctor.py  loader.py  manifest.py  package.py  paths.py  pipeline.py  prefs.py  publish.py  render.py  validate.py
bindings/: platform.yaml  preprod.yaml
catalog/: labels.yaml  signals.yaml
catalog/bundles/: README.md  tier-a-java-core.yaml  tier-b-python.yaml
catalog/signals/: README.md  client-deps.yaml  functional.yaml  http.yaml  jvm.yaml  kafka.yaml  kubernetes.yaml  logs-traces.yaml  platform-exporters.yaml  platform-overview.yaml  product.yaml
docs/: ARCHITECTURE.md  ONBOARDING.md  OPS_RELEASE.md  PLAN-10-10-product-observability.md  TRACKING.md  VERIFICATION.md
docs/ops/: debugging-signal-checklist.md  foreign-datasource-checklist.md
docs/phases/: README.md  phase-0-bootstrap.md  phase-1-prep.md  (+4 more)
infra/: registry.yaml
publishers/: __init__.py  grafana_configmap.py
schema/: bindings.schema.json  dashboard-ir.schema.json  registry.schema.json  service-observability.schema.json  signal-bundle.schema.json  signal-catalog.schema.json  signal-module.schema.json
services/: registry.yaml
tests/: conftest.py  test_phase0.py  test_phase1_prep.py  test_prefs_and_package.py
(+14 files in other folders)
