[project]
name = "am-observability"
version = "0.0.0"
description = "Tool-agnostic observability definitions and generator for AM microservices"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
